8250810: Push missing parts of JDK-8248817

Push changes from JDK-8248817 that were accidentally excluded from the commit.

Reviewed-by: kbarrett, dholmes